# Page-analyzator

./: Makefile  README.md  pyproject.toml  requirements.txt
page_analyzer/: app.py  database.py  page.py  pyproject.toml  requirements.txt
page_analyzer/templates/: base.html  index.html  pages.html  show_url.html  urls.html
