[tool.poetry]
name = "page_analyzer"
version = "0.1.0"
description = ""
authors = ["M1RRoN <mds.myst@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^20.1.0"
Flask = "^2.2.2"
python-dotenv = "^0.21.1"
flake8 = "6.0.0"
psycopg2-binary = "^2.9.5"
validators = "^0.20.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[build]
builder = "NIXPACKS"

[deploy]
startCommand = "poetry run gunicorn -w 5 -b 0.0.0.0:$(PORT) page_analyzer:app"
restartPolicyType = "ON_FAILURE"
restartPolicyMaxRetries = 10
